updates for sparql templates, swagger docs, search api endpoints
